--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -4,8 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <LinearLayout 
-    	android:id="@+id/linearLayout1" 
+    <LinearLayout  
     	android:layout_width="match_parent" 
     	android:layout_height="wrap_content" 
     	android:orientation="vertical" android:layout_margin="10dp" >
@@ -23,5 +22,23 @@
          	android:hint="Password" android:layout_gravity="center" 
          	android:layout_width="match_parent" 
          	android:id="@+id/pass_text" />
+    </LinearLayout>
+    <LinearLayout 
+    	android:layout_width="match_parent" 
+    	android:layout_height="wrap_content" 
+    	android:orientation="vertical" >
+        <LinearLayout 
+        	android:layout_width="match_parent" 
+        	android:layout_height="wrap_content" 
+        	android:gravity="center" 
+        	android:layout_marginLeft="10dp" 
+        	android:layout_marginRight="10dp" >
+            <Button 
+            	android:text="Button" 
+            	android:layout_height="wrap_content" 
+            	android:gravity="center" 
+            	android:layout_width="match_parent" 
+            	android:id="@+id/login_button" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
