--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -7,7 +7,8 @@
     <LinearLayout  
     	android:layout_width="match_parent" 
     	android:layout_height="wrap_content" 
-    	android:orientation="vertical" android:layout_margin="10dp" >
+    	android:orientation="vertical" 
+    	android:layout_margin="10dp" >
         <EditText 
         	android:inputType="textEmailAddress" 
         	android:layout_weight="1" 
@@ -22,23 +23,11 @@
          	android:hint="Password" android:layout_gravity="center" 
          	android:layout_width="match_parent" 
          	android:id="@+id/pass_text" />
-    </LinearLayout>
-    <LinearLayout 
-    	android:layout_width="match_parent" 
-    	android:layout_height="wrap_content" 
-    	android:orientation="vertical" >
-        <LinearLayout 
+        <Button 
+        	android:text="@string/login_button_text" 
+        	android:id="@+id/login_button" 
         	android:layout_width="match_parent" 
-        	android:layout_height="wrap_content" 
         	android:gravity="center" 
-        	android:layout_marginLeft="10dp" 
-        	android:layout_marginRight="10dp" >
-            <Button 
-            	android:text="Button" 
-            	android:layout_height="wrap_content" 
-            	android:gravity="center" 
-            	android:layout_width="match_parent" 
-            	android:id="@+id/login_button" />
-        </LinearLayout>
+        	android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
