--- a/res/layout/profile.xml
+++ b/res/layout/profile.xml
@@ -8,8 +8,8 @@
     </LinearLayout>
     <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent">
         <LinearLayout android:layout_height="match_parent" android:id="@+id/linearLayout3" android:layout_width="match_parent">
-            <Button android:text="@string/add_item_button_text" android:id="@+id/button1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1"></Button>
-            <Button android:id="@+id/button2" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="match_parent" android:text="@string/bid_item_screen_button"></Button>
+            <Button android:text="@string/add_item_button_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/register_button_id"></Button>
+            <Button android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="match_parent" android:text="@string/bid_item_screen_button" android:id="@+id/buy_button_id"></Button>
         </LinearLayout>
     </LinearLayout>
     
