--- a/res/layout/register_item.xml
+++ b/res/layout/register_item.xml
@@ -4,7 +4,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent" android:orientation="vertical">
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
-        <EditText android:id="@+id/editText1" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="Name"></EditText>
+        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="Name" android:id="@+id/item_edit_text"></EditText>
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">
         <Button android:layout_height="wrap_content" android:id="@+id/confirm_register_button" android:layout_weight="1" android:layout_width="match_parent" android:text="@string/register_text"></Button>
