It is now possible to create aunctions.

--- a/res/layout/profile.xml
+++ b/res/layout/profile.xml
@@ -3,6 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent" android:orientation="vertical">
+    <TextView android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:id="@+id/funds_label_id" android:textSize="17sp"></TextView>
     <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="match_parent" android:layout_weight="1">
         <ListView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/profile_items_list_id"></ListView>
     </LinearLayout>
